[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://font/Vazir.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = 40.0
margin_right = 1250.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
align = 2

[node name="Label2" type="Label" parent="."]
margin_left = 10.0
margin_top = 140.0
margin_right = 1250.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 1 )
align = 2

[node name="Label3" type="Label" parent="."]
margin_left = 10.0
margin_top = 240.0
margin_right = 1250.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 1 )
align = 2

[node name="Label4" type="Label" parent="."]
margin_left = 420.0
margin_top = 360.0
margin_right = 920.0
margin_bottom = 560.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
align = 2
autowrap = true

[node name="Label5" type="Label" parent="."]
margin_left = 420.0
margin_top = 510.0
margin_right = 920.0
margin_bottom = 710.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
align = 2

